finisehd the blog functionality

--- a/src/content/blogs/do.mdx
+++ b/src/content/blogs/do.mdx
@@ -1,4 +1,94 @@
 ---
+    title: this is 
+    description: this is
+    author: this is
+    date: this is
+    img: https://uploadthing.com/f/1d44f1a9-3083-4a59-860b-d421161d5c4c_rainbow-vortex.svg
 ---
 # this is the cool part
-all this is cool 
+all this is cool
+all this is coolall this is cool 
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+all this is cool
+all this is coolall this is cool
+
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
+all this is cool
