--- a/src/content/projects/dushdo.mdx
+++ b/src/content/projects/dushdo.mdx
@@ -1,7 +1,6 @@
 ---
     title: Dushdo
-    description: This ToDo app is built with Tauri, React, and Tailwind CSS. It uses the Pomodoro Technique to help you focus on tasks and increase productivity. With this app, you can easily create tasks, set timers, and track your progress. In addition, there is a sound studio feature that allows you to listen to white noise or any thing
- while you work. The app also has statistics page where you can view your progress and a settings page to customize your experience.
+    description: This ToDo app is built with Tauri, React, and Tailwind CSS. It uses the Pomodoro Technique to help you focus on tasks and increase productivity. With this app, you can easily create tasks, set timers, and track your progress. In addition, there is a sound studio feature that allows you to listen to white noise or any thing. while you work. The app also has statistics page where you can view your progress and a settings page to customize your experience.
     date: 01/03/2023
     img: https://uploadthing.com/f/d2459dbe-4038-4cc4-8541-b476b5eaeb42_something.PNG
     link: https://www.dushdo.com
