--- a/src/content/projects/dushdo.mdx
+++ b/src/content/projects/dushdo.mdx
@@ -6,3 +6,5 @@
     link: https://www.dushdo.com
     tech: typescript, react, nextjs, tauri, tailwind css, tanstack query, zustand
 ---
+
+do it working
