--- a/src/content/blogs/do.mdx
+++ b/src/content/blogs/do.mdx
@@ -5,9 +5,14 @@
     date: 05-09-2023
     img: https://uploadthing.com/f/1d44f1a9-3083-4a59-860b-d421161d5c4c_rainbow-vortex.svg
 ---
+
+
+
+
 # this is the cool part
-all this is cool    
-all this is coolall this is cool 
+
+all this is cool
+all this is coolall this is cool
 all this is cool
 all this is cool
 
@@ -28,6 +33,12 @@ all this is cool
 all this is cool
 all this is cool
 all this is cool
+  
+```javascript
+ console.log("hello world")
+
+```
+
 all this is cool
 all this is cool
 all this is cool
@@ -41,9 +52,6 @@ all this is cool
 all this is cool
 all this is cool
 all this is coolall this is cool
-all this is cool
-all this is cool
-all this is cool
 all this is cool
 all this is cool
 all this is cool
