--- a/src/content/projects/dushdo.mdx
+++ b/src/content/projects/dushdo.mdx
@@ -6,5 +6,50 @@
     link: https://www.dushdo.com
     tech: typescript, react, nextjs, tauri, tailwind css, tanstack query, zustand
 ---
+## Showcase: Dushdo - The Ultimate Productivity App & Its Ecosystem
 
-do it working
+Hey there 👋! I'm **Moncef**, the developer behind **Dushdo**, a comprehensive desktop application aimed at boosting your productivity. Below, I'll walk you through the stack and features of Dushdo, as well as its companion website, to showcase what I can bring to the table as a developer.
+
+![Dushdo App](https://uploadthing.com/f/9b13dd76-ae68-4d59-a781-d3175a35817f-ifl2wo.PNG)
+
+### Technologies Used
+
+- **Backend**: SQLite Database
+- **Frontend**: React, TypeScript, and Tailwind CSS
+- **Desktop Integration**: Tauri
+- **State Management**: Zustand
+- **Web Development**: Next.js, MDX
+
+### Dushdo App Features
+
+- **Task Management**: Efficiently create and categorize tasks.
+- **Pomodoro Technique**: Integrate your tasks with the Pomodoro technique for better focus and productivity.
+- **White Noise Generator**: Enhance your focus with a built-in, customizable white noise generator.
+
+### Why It Matters
+
+What makes Dushdo unique is the depth of its feature set coupled with its user-friendly interface. This project demonstrates my capabilities in:
+
+- Full-stack development
+- UI/UX design
+- Database design
+- State management
+- Desktop app development
+
+### The Website: More Than Just a Landing Page
+
+In addition to the desktop app, I designed and built the [Dushdo website](https://dushdo.com) using Next.js, TypeScript, MDX, and Tailwind CSS.
+
+![Dushdo Landing Page](https://uploadthing.com/f/d2459dbe-4038-4cc4-8541-b476b5eaeb42_something.PNG)
+
+And if you're a fan of blogs, don't forget to check out the [Dushdo Blog](https://dushdo.com/blog).
+
+![Dushdo Blog Page](https://uploadthing.com/f/cd35c0af-5738-44f2-9f69-31d70f8d8831-67mfsc.PNG)
+
+### Ready for Collaboration
+
+I am open to job opportunities and collaborations. If you're impressed with what you see and want to see what else I can do, don't hesitate to reach out.
+
+---
+
+Feel free to visit [Dushdo](https://dushdo.com) to explore the app and read some interesting articles on the [blog](https://dushdo.com/blog). Thanks for stopping by, and let's make productivity a habit, not a task!
