changed some thing in the blog

--- a/src/content/blogs/send-email-with-astro.mdx
+++ b/src/content/blogs/send-email-with-astro.mdx
@@ -29,8 +29,8 @@ pnpm i nodemailer zod
 Create a ```.env``` file and add your credentials see [this](https://support.google.com/mail/answer/185833?hl=en) to learn how to get it  :
 
 ```makefile
-MY_EMAIL=youremail # you can get it 
-MY_PASSWORD=yourpassword
+MY_EMAIL=yourappemail@gmail.com 
+MY_PASSWORD=yourapppassword
 ```
 
 ## Email Utility Function
