changed somthing on the blog

--- a/src/content/blogs/send-email-with-astro.mdx
+++ b/src/content/blogs/send-email-with-astro.mdx
@@ -167,7 +167,7 @@ pnpm astro add node
 However, if you wish to deploy it serverlessly on Vercel, use this command instead:
 
 ```bash
-pnpm astro add node
+pnpm astro add vercel
 ```
 
 For more information on this subject, check out the [Astro SSR guide](https://docs.astro.build/en/guides/server-side-rendering).
