changed some thing small

--- a/src/content/projects/dushdo.mdx
+++ b/src/content/projects/dushdo.mdx
@@ -5,6 +5,7 @@
     img: https://uploadthing.com/f/d2459dbe-4038-4cc4-8541-b476b5eaeb42_something.PNG
     link: https://www.dushdo.com
     tech: typescript, react, nextjs, tauri, tailwind css, tanstack query, zustand
+    color: hsl(135, 20%, 45%)
 ---
 ## Showcase: Dushdo - The Ultimate Productivity App & Its Ecosystem
 
